removing useless files, and added bot policy for security manager